--- a/index.html
+++ b/index.html
@@ -7,3 +7,4 @@
       as well as this class!</p>
       </body>
     </html>  
+<img src = "http://cdn.collider.com/uploads/imageGallery/Hot_Rod/andy_samberg_hot_rod_movie_image__9_.jpg"
