--- a/index.html
+++ b/index.html
@@ -1,10 +1,12 @@
+<DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8">
     <title>Scott's site</title>
   </head>
     <body>
+      <img src = "http://cdn.collider.com/uploads/imageGallery/Hot_Rod/andy_samberg_hot_rod_movie_image__9_.jpg"
       <p> This site is cool,
       as well as this class!</p>
       </body>
     </html>  
-<img src = "http://cdn.collider.com/uploads/imageGallery/Hot_Rod/andy_samberg_hot_rod_movie_image__9_.jpg"
