--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Scott's Favorite Shows</title>
-    <link style="stylesheet" type="text/css" href="mystyle.css">
+    <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <body>
       <img src = "http://cdn.collider.com/uploads/imageGallery/Hot_Rod/andy_samberg_hot_rod_movie_image__9_.jpg">
