--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="mystyle.css">
   </head>
   <body>
+    background-image: http://flaglane.com/download/american-flag/american-flag-large.jpg("paper.gif")
       <img src = "http://cdn.collider.com/uploads/imageGallery/Hot_Rod/andy_samberg_hot_rod_movie_image__9_.jpg">
     
   <h1> <Rodney from Hot Rod</h1>
