--- a/index.html
+++ b/index.html
@@ -60,10 +60,9 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
-        <li><a href="#">Skateboards</a></li>
-        <li><a href="#">Longboards</a></li>
-        <li><a href="#">Cruisers</a></li>
-        <li><a href="#">Tricks</a></li>
+        <li><a href="Skateboarding.html">Skateboards</a></li>
+        <li><a href=Longboarding.html">Longboards</a></li>
+        <li><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
