--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <ul class="nav navbar-nav">
         <li class="active"><a href="#">Home</a></li>
         <li><a href="Skateboarding.html">Skateboards</a></li>
-        <li><a href=Longboarding.html">Longboards</a></li>
+        <li><a href="Longboarding.html">Longboards</a></li>
         <li><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
