--- a/Skateboarding.html
+++ b/Skateboarding.html
@@ -59,11 +59,10 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
-        <li class="active"><a href="#">Skateboards</a></li>
-        <li><a href="#">Longboards</a></li>
-        <li><a href="#">Cruisers</a></li>
-        <li><a href="#">Tricks</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="Skateboarding.html">Skateboards</a></li>
+        <li><a href="Longboarding.html">Longboards</a></li>
+        <li><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
@@ -85,7 +84,7 @@ Skateboarding-
 </h2>
 
 <h5>
-For those who enjoy dank tricks.
+For those who enjoy hardcore tricks.
 
 </h5>
 
