--- a/Cruising.html
+++ b/Cruising.html
@@ -62,7 +62,7 @@
         <li><a href="#">Home</a></li>
         <li><a href="#">Skateboards</a></li>
         <li><a href="#">Longboards</a></li>
-        <li class="active"><a href="#">Cruisers</a></li>
+        <li class="active"><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
