--- a/Longboarding.html
+++ b/Longboarding.html
@@ -57,9 +57,18 @@
       </button>
       <a class="navbar-brand" href="#">Logo</a>
     </div>
+ <div class="collapse navbar-collapse" id="myNavbar">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="Skateboarding.html">Skateboards</a></li>
+        <li><a href="Longboarding.html">Longboards</a></li>
+        <li><a href="Cruising.html">Cruisers</a></li>
+      </ul>
+      <ul class="nav navbar-nav navbar-right">
+      </ul>
     </div>
   </div>
-</nav>
+  </nav>
   
 <html>
 <title>W3.CSS</title>
