--- a/Skateboarding.html
+++ b/Skateboarding.html
@@ -58,8 +58,8 @@
       </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
-        <li><a href="Skateboarding.html">Skateboards</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li class="active"><a href="Skateboarding.html">Skateboards</a></li>
         <li><a href="Longboarding.html">Longboards</a></li>
         <li><a href="Cruising.html">Cruisers</a></li>
       </ul>
