--- a/Longboarding.html
+++ b/Longboarding.html
@@ -59,9 +59,9 @@
     </div>
  <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li class="active"><a href="index.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Skateboarding.html">Skateboards</a></li>
-        <li><a href="Longboarding.html">Longboards</a></li>
+        <li class="active"><a href="Longboarding.html">>Longboards</a></li>
         <li><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
