--- a/Cruising.html
+++ b/Cruising.html
@@ -60,8 +60,8 @@
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="#">Home</a></li>
-        <li><a href="#">Skateboards</a></li>
-        <li><a href="#">Longboards</a></li>
+        <li><a href="Skateboarding.html">Skateboards</a></li>
+        <li><a href="Longboarding.html">Longboards</a></li>
         <li class="active"><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
