--- a/Longboarding.html
+++ b/Longboarding.html
@@ -55,13 +55,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <a class="navbar-brand" href="#">Logo</a>
     </div>
  <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="Skateboarding.html">Skateboards</a></li>
-        <li class="active"><a href="Longboarding.html">>Longboards</a></li>
+        <li class="active"><a href="Longboarding.html">Longboards</a></li>
         <li><a href="Cruising.html">Cruisers</a></li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
