--- a/Cruising.html
+++ b/Cruising.html
@@ -59,7 +59,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
       <ul class="nav navbar-nav">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="Skateboarding.html">Skateboards</a></li>
         <li><a href="Longboarding.html">Longboards</a></li>
         <li class="active"><a href="Cruising.html">Cruisers</a></li>
