--- a/Longboarding.html
+++ b/Longboarding.html
@@ -60,8 +60,9 @@
       <ul class="nav navbar-nav">
         <li><a href="index.html">Home</a></li>
         <li><a href="Skateboarding.html">Skateboards</a></li>
-        <li class="active">a href="Longboarding.html">Longboards</a></li>
+        <li class="active"><a href="Longboarding.html">Longboards</a></li>
         <li><a href="Cruising.html">Cruisers</a></li>
+        
       </ul>
       <ul class="nav navbar-nav navbar-right">
       </ul>
