--- a/index.html
+++ b/index.html
@@ -127,8 +127,14 @@ function carousel() {
       <p>New to Chipped? We're glad you're here! Chipped is a website by skaters, for skaters. Chipped features photos perfect for any screensaver or wallpaper, all at the click of a mouse. New to skateboarding? Check out our Tricks page and learn something cool to show your friends!</p>
       
     </div>
- <h2>Paul Rodriguez</h2>
- <h4> Talk about paul</h4>
+ <h3>FEATURED SKATER- PAUL RODRIGUEZ</h3>
+ <h4>"Paul Rodriguez, also known as “P-Rod” was recognized as a prodigy at the young age of 14, only two years after he started skating.  His consistency, effortless style and persistence on his board led Paul to travel far from his home town of Northridge, CA to the City Streets around the world as a part of the legendary City Stars team.  His passion for skating and filming with his friends led to his breakout part in Logic 6 in 2000, Street Cinema in 2001 and landed him Rookie of the Year in 2002 for his part in Tranworld’s video production “In Bloom.”  He turned pro later that year.
+
+P-Rod was one of a few skateboarders to form the Nike SB team, and later, Paul was the first skateboarder to be endorsed as an official Nike Athlete, as well as the first Mexican American to earn a signature shoe for Nike.  In 2004, he won his first of 3 Gold Medals in the X Games.  His favorite things to skate are ledges, rails, and stairs.   Paul’s partners/sponsors are: Nike, Primitive Skateboarding, Target, Nixon, In-Case, Venture, Markisa, Andale and Glassy.
+
+Son of famous comedian and actor Paul Rodriguez, Paul bought his first skateboard at the age of 12.  When he’s not skateboarding, Paul enjoys studying the lives of influential individuals, including his favorites such as Alexander the Great and Bruce Lee.
+
+Paul currently lives in Los Angeles" (prod84.com)</h4>
 
 
    
@@ -151,5 +157,11 @@ function carousel() {
   
 </div>
 
+  
+  
+  
+  
+  
+  
 </body>
 </html>
