--- a/Skateboarding.html
+++ b/Skateboarding.html
@@ -163,13 +163,25 @@ div.desc {
 </div>
   
   
+  <div class="gallery">
+  <a target="_blank" href="https://i.ytimg.com/vi/xj69VkBHtp4/maxresdefault.jpg">
+    <img src="https://i.ytimg.com/vi/xj69VkBHtp4/maxresdefault.jpg" alt="Mountains" width="1000" height="600">
+  </a>
+  <div class="desc"></div>
+</div>
   
+  <div class="gallery">
+  <a target="_blank" href="http://www.exploratorium.edu/skateboarding/images/alt/kickflip.png">
+    <img src="http://www.exploratorium.edu/skateboarding/images/alt/kickflip.png" alt="Mountains" width="1000" height="600">
+  </a>
+  <div class="desc"></div>
+</div>
   
   <p><b> Craziest Skateboard Tricks </b></p>
   <p>Casper Flip <p> 
  <p> A half kickflip caught almost upside down with the front foot under the front truck and the back foot on the tail, then flipped back over with a shuvit heelflip like motion. </p>
 
-   Try a hospital flip instead. It looks the same but you only need to use your front foot. </h3>
+   <p>Try a hospital flip instead. It looks the same but you only need to use your front foot. </p>
   <p> Pressure Flip </p>
   <p> A flip trick that is popped and flipped with the same foot. They don’t really pop like an ollie. They are more of a scooping motion where the bushings get pinched and the pressure causes the board to pop out from under the foot. There are many variations like nerd flips, toe flips 360 flips and so on. </p>
   <p> Nightmare Flip </>
