--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@ function carousel() {
       
     </div>
   
- <p><b>FEATURED SKATER- PAUL RODRIGUEZ</b></p>
+ <p><b>PAUL RODRIGUEZ</b></p>
 <p>"Paul Rodriguez, also known as “P-Rod” was recognized as a prodigy at the young age of 14, only two years after he started skating.  His consistency, effortless style and persistence on his board led Paul to travel far from his home town of Northridge, CA to the City Streets around the world as a part of the legendary City Stars team.  His passion for skating and filming with his friends led to his breakout part in Logic 6 in 2000, Street Cinema in 2001 and landed him Rookie of the Year in 2002 for his part in Tranworld’s video production “In Bloom.”  He turned pro later that year.
 
 P-Rod was one of a few skateboarders to form the Nike SB team, and later, Paul was the first skateboarder to be endorsed as an official Nike Athlete, as well as the first Mexican American to earn a signature shoe for Nike.  In 2004, he won his first of 3 Gold Medals in the X Games.  His favorite things to skate are ledges, rails, and stairs.   Paul’s partners/sponsors are: Nike, Primitive Skateboarding, Target, Nixon, In-Case, Venture, Markisa, Andale and Glassy.
