--- a/Cruising.html
+++ b/Cruising.html
@@ -162,7 +162,11 @@ div.desc {
   <div class="desc"></div>
 </div>
 
+<html>
+<body>
 
+<iframe width="420" height="345" src="https://www.youtube.com/watch?v=mXqmRAUsn9U">
+</iframe>
 
 </body>
 </html>
